# hindsight

./: .gitignore  DESIGN.md  README.md  math-and-results.md  pyproject.toml
data/: model_cutoffs.json  prices.csv
data/runs/: leaderboard.csv
examples/: leaderboard_demo.py  llm_decider_demo.py  real_leaderboard.py
scripts/: fetch_prices.py
src/hindsight/: __init__.py  backtest.py  cutoffs.py  evaluate.py  harness.py  llm.py  results.py  strategies.py
tests/: test_backtest.py  test_cutoffs.py  test_evaluate.py  test_harness.py  test_llm.py  test_results.py
