[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hindsight"
version = "0.0.1"
description = "Leakage observability for LLM trading backtests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniel Brooks" }]
dependencies = ["numpy>=1.26", "pandas>=2.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
llm = ["openai>=1.40", "pydantic>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/hindsight"]

[tool.ruff]
line-length = 100
target-version = "py311"
